<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <data>

        <variable
            name="mainActivity"
            type="com.example.parkingmanagment.MainActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background">


        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/themeLight"
            android:src="@drawable/custom_logo"
            android:text="@string/app_name"
            android:tint="@color/logoColor"
            app:layout_constraintBottom_toTopOf="@+id/creds_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/creds_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="200dp"
            android:layout_marginRight="30dp"
            app:cardCornerRadius="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_dialog_background"
                android:padding="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"
                    app:ccp_defaultPhoneCode="1"
                    app:ccp_showFlag="false"
                    app:ccp_showFullName="false"
                    app:ccp_showNameCode="false"
                    app:layout_constraintBottom_toTopOf="@+id/login_button_card"
                    app:layout_constraintHorizontal_weight="1.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/et_phone"
                    app:layout_constraintTop_toTopOf="parent" />

                <custom_view.PmEditText
                    android:id="@+id/et_phone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:autofillHints="(xxx) xxx-xxxx"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:paddingBottom="20dp"
                    android:text="@={mainActivity.phone}"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/login_button_card"
                    app:layout_constraintHorizontal_weight="4.0"
                    app:layout_constraintLeft_toRightOf="@id/ccp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/login_button_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_phone">

                    <custom_view.PmButton
                        android:id="@+id/login_button"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:background="@color/themeLight"
                        android:text="@string/sent_otp"
                        android:textColor="@color/themeDark"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_phone" />
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>